Update flake8 configuration file

--- a/movies_admin/setup.cfg
+++ b/movies_admin/setup.cfg
@@ -1,7 +1,19 @@
 [flake8]
 per-file-ignores =
   test_*.py: S101,DAR101,D100
-  config/components/*.py,config/settings.py: WPS407,WPS226, WPS432
-# WPS305: Forbid f strings.
-ignore = WPS305
+  config/components/*.py,config/settings.py: WPS407,WPS226 
+  models.py: 
+    # D101: Missing docstring in public class
+    D101,
+    # D106: Missing docstring in public nested class 
+    D106,
+    # WPS306: Found class without a base class
+    WPS306
+
+ignore = 
+  # WPS305: Forbid f strings.
+  WPS305,
+  # WPS432: Found magic number
+  WPS432,
+  D101
 max-line-length = 100 
