Update flake8 configuration file

--- a/movies_admin/setup.cfg
+++ b/movies_admin/setup.cfg
@@ -7,8 +7,14 @@ per-file-ignores =
     D101,
     # D106: Missing docstring in public nested class 
     D106,
+    # D105: Missing docstring in magic method
+    D105,
     # WPS306: Found class without a base class
-    WPS306
+    WPS306,
+    # WPS115: Found upper-case constant in a class
+    WPS115
+    # WPS431: Found nested class: FilmworkTypes
+    WPS431
 
 ignore = 
   # WPS305: Forbid f strings.
