--- a/movies_admin/Pipfile
+++ b/movies_admin/Pipfile
@@ -9,6 +9,7 @@ flake8 = "==6.0"
 python-dotenv = "*"
 psycopg2 = "*"
 django-split-settings = "*"
+django-debug-toolbar = "==3.4.0"
 
 [dev-packages]
 
