Update uwsgi configuration file

--- a/docker_compose/movies_service/app/uwsgi/uwsgi.ini
+++ b/docker_compose/movies_service/app/uwsgi/uwsgi.ini
@@ -2,8 +2,8 @@
 socket = :8000
 protocol = http
 
-uid = web
-gid = web
+uid = app
+gid = app
 
 master = true
 no-orphans = true
@@ -33,5 +33,3 @@ wsgi-file = config/wsgi.py
 
 post-buffering = 1048576
 buffer-size = 65535
-static-map = /static=/var/www/static
-static-map = /media=/var/www/media
