--- a/docker_compose/movies_service/docker-compose.yml
+++ b/docker_compose/movies_service/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
-  movies_service:
+  web-app:
     build: app
+    volumes:
+      - staticfiles_volume:/opt/app/static/
     expose:
       - "8000"
     depends_on:
@@ -12,9 +14,9 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./configs:/etc/nginx/conf.d:ro
-      - ./data:/data/:ro
+      - staticfiles_volume:/var/www/data/static
     depends_on:
-      - movies_service
+      - web-app
     ports:
       - "80:80"
 
@@ -24,8 +26,10 @@ services:
     env_file: ./app/.env
     ports:
       - '5432:5432'
-    # volumes: 
-    #   - postgres_db:/var/lib/postgresql/data
+    volumes: 
+      - postgres_db_volume:/var/lib/postgresql/data
+    
 
 volumes:
-  postgres_db:
+  postgres_db_volume:
+  staticfiles_volume:
