--- a/docker_compose/movies_service/nginx/nginx.conf
+++ b/docker_compose/movies_service/nginx/nginx.conf
@@ -7,6 +7,9 @@ events {
 
 
 http {
+
+    server_tokens off;
+    
     include       mime.types;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
