--- a/movies_service/movies_admin/requirements.txt
+++ b/movies_service/movies_admin/requirements.txt
@@ -1,5 +1,6 @@
 django==3.2
-python-dotenv=0.21.1
+python-dotenv==0.21.1
 flake8==6.0
 psycopg2==2.9.5
 django-split-settings==1.2.0 
+uwsgi==2.0.20
