Add & configure corsheaders for swagger url

--- a/movies_service/movies_admin/Pipfile
+++ b/movies_service/movies_admin/Pipfile
@@ -10,6 +10,7 @@ python-dotenv = "*"
 psycopg2 = "*"
 django-split-settings = "*"
 django-debug-toolbar = "==3.4.0"
+django-cors-headers = "*"
 
 [dev-packages]
 django-extensions = "*"
