Add --no-cache-dir option

--- a/movies_service/movies_admin/Dockerfile
+++ b/movies_service/movies_admin/Dockerfile
@@ -15,8 +15,8 @@ COPY requirements.txt requirements.txt
 
 RUN  mkdir -p /opt/app/static/ \
      && mkdir -p /opt/app/media/ \
-     && pip install --upgrade pip \
-     && pip install -r requirements.txt
+     && pip install --no-cache-dir --upgrade pip \
+     && pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
