Add connection check before makemigrations
- install netcat in Dockerfile
- use .env file on startup of the web-app container to setup the environment
- add wait-loop before database makemigrations in the entrypoint script

--- a/movies_service/docker-compose.yml
+++ b/movies_service/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - staticfiles_volume:/opt/app/static/
     expose:
       - "8000"
+    env_file: ./movies_admin/.env
     depends_on:
       - postgres_db
 
