Compile locales messages on startup
- install gettext dependency
- update locale messages
- execute compilemessages command in the entrypoint script

--- a/movies_service/movies_admin/Dockerfile
+++ b/movies_service/movies_admin/Dockerfile
@@ -17,6 +17,7 @@ RUN  mkdir -p /opt/app/static/ \
      && mkdir -p /opt/app/media/ \
      && apt update; apt install -y \
                         netcat \
+                        gettext \
      && pip install --no-cache-dir --upgrade pip \
      && pip install --no-cache-dir -r requirements.txt
 
