Configure nginx locations more precisely
- specify locations to allow redirection to the application server using Regex.

--- a/movies_service/nginx/site-configs/movies_admin.conf
+++ b/movies_service/nginx/site-configs/movies_admin.conf
@@ -21,7 +21,11 @@ server {
     location /static/ {
     }
 
-    location / {
+    location ~* "^(\/(en|ru)|)\/admin\/.*$" {
+        try_files $uri @backend;
+    }
+
+    location ~* "^(\/(en|ru)|)\/api\/v[1]\/.*$" {
         try_files $uri @backend;
     }
 }
