Split docker environment for dev & prod
- introduce docker-compose.override.yml to run the app in development environment
- split dockerfile using different staging & targets
- expose postgres db port
- add docker-entrypoint-dev.sh for development environment
- update Pipfile

--- a/movies_service/docker-compose.yml
+++ b/movies_service/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   web-app:
-    build: movies_admin
+    build:
+      context: './movies_admin'
+      target: "production"
     volumes:
       - staticfiles_volume:/opt/app/static/
     expose:
@@ -25,8 +27,8 @@ services:
     image: postgres:14.1-alpine
     restart: always
     env_file: .pg_env
-    ports:
-      - '5432:5432'
+    expose:
+      - "5432"
     volumes: 
       - postgres_db_volume:/var/lib/postgresql/data
     
